Add PRK and PLMS sampling methods

--- a/notebooks/text2im.ipynb
+++ b/notebooks/text2im.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Run this line in Colab to install the package if it is\n",
     "# not already installed.\n",
-    "!pip install git+https://github.com/openai/glide-text2im"
+    "!pip install git+https://github.com/crowsonkb/glide-text2im"
    ]
   },
   {
@@ -52,7 +52,7 @@
     "# Create base model.\n",
     "options = model_and_diffusion_defaults()\n",
     "options['use_fp16'] = has_cuda\n",
-    "options['timestep_respacing'] = '100' # use 100 diffusion steps for fast sampling\n",
+    "options['timestep_respacing'] = '27' # use 25 diffusion steps for fast sampling\n",
     "model, diffusion = create_model_and_diffusion(**options)\n",
     "model.eval()\n",
     "if has_cuda:\n",
@@ -71,7 +71,7 @@
     "# Create upsampler model.\n",
     "options_up = model_and_diffusion_defaults_upsampler()\n",
     "options_up['use_fp16'] = has_cuda\n",
-    "options_up['timestep_respacing'] = 'fast27' # use 27 diffusion steps for very fast sampling\n",
+    "options_up['timestep_respacing'] = '17' # use 15 diffusion steps for very fast sampling\n",
     "model_up, diffusion_up = create_model_and_diffusion(**options_up)\n",
     "model_up.eval()\n",
     "if has_cuda:\n",
@@ -157,7 +157,7 @@
     "\n",
     "# Sample from the base model.\n",
     "model.del_cache()\n",
-    "samples = diffusion.p_sample_loop(\n",
+    "samples = diffusion.plms_sample_loop(\n",
     "    model_fn,\n",
     "    (full_batch_size, 3, options[\"image_size\"], options[\"image_size\"]),\n",
     "    device=device,\n",
@@ -206,7 +206,7 @@
     "# Sample from the base model.\n",
     "model_up.del_cache()\n",
     "up_shape = (batch_size, 3, options_up[\"image_size\"], options_up[\"image_size\"])\n",
-    "up_samples = diffusion_up.ddim_sample_loop(\n",
+    "up_samples = diffusion_up.plms_sample_loop(\n",
     "    model_up,\n",
     "    up_shape,\n",
     "    noise=th.randn(up_shape, device=device) * upsample_temp,\n",
@@ -221,14 +221,22 @@
     "# Show the output\n",
     "show_images(up_samples)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "accelerator": "GPU",
   "interpreter": {
    "hash": "e7d6e62d90e7e85f9a0faa7f0b1d576302d7ae6108e9fe361594f8e1c8b05781"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -242,9 +250,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
-  },
-  "accelerator": "GPU"
+   "version": "3.8.10"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
